# Object-Filtering

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
docs/: filter_specifications.md
src/object_filtering/: __init__.py  object_filtering.py
tests/: test_all.py
